adding approval status
adding approval column to database

--- a/src/main/resources/templates/customers.html
+++ b/src/main/resources/templates/customers.html
@@ -28,7 +28,7 @@
 				</thead>
 				<tbody>
 					<tr th:each="user: ${listCustomers}">
-						<td th:text="${customer.id}">User Id</td>
+						<td th:text="${customer.cust_id}">customer Id</td>
 						<td th:text="${customer.email}">Email</td>
 						<td th:text="${customer.name}">Full Name</td>
 					</tr>
