--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -26,7 +26,7 @@
 					<label class ="col-form-label col-4">Password</label>
 					<div class="col-8">
 						<input type="password" class="form-control" th:field="*{password}" required
-						minlength="6" maxlength="10" />
+						 minlength="4" />
 					</div>
 				</div>
 				<div class ="form-group row">
@@ -39,8 +39,8 @@
 				<div class ="form-group row">
 					<label class ="col-form-label col-4">Mobile Number</label>
 					<div class="col-8">
-						<input type="number" class="form-control" th:field="*{mobileNumber}" required
-						minlength="10" maxlength="10" />
+						<input type="number" class="form-control" th:field="*{mobileNumber}" required 
+						minlength="10" maxlength="12" />
 					</div>
 				</div>
 				
