--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container text-center">
 	<div>
-		<h1>Customer Registration - Sign Up</h1>
+		<h1>Employee Registration - Sign Up</h1>
 	</div>
 	
 	<div>
